--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="COIN 1 : "
+        android:text="@string/first_coin"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_gravity="center"
@@ -53,7 +53,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="COIN 2 : "
+        android:text="@string/second_coin"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_gravity="center"
@@ -103,7 +103,7 @@
             android:layout_gravity="center"
             android:textSize="30dp"
             android:layout_marginRight="10dp"
-            android:text="EXCHANGE RATE : "/>
+            android:text="@string/exchange_rate"/>
 
         <TextView
             android:layout_width="wrap_content"
